# todeldel-git-dir-fuerUbergangsFiles

./: .gitignore  .~lock.concat-reli-013.csv#  .~lock.concat-reli-109.csv#  01_system_full.csv  02_system_only.csv  03_automation_only.csv  04_combo_flags.csv  05_geometry.csv  06_system_automation_short.csv  2024-07-06-symbols-alt-ak-circle-sphere-etc.csv  a1.py  aftermoons.csv  b2.py  bla.txt  bothCols-2  bothCols.cpp  bothCols.py  bothCols.sh  c3.py  cat-2  cat.c  cat.py  cat.sh  check.py  cliphook.c  cliphook.cpp  cliphook.go  cliphook.hs  cliphook.java  cliphook.kt  cliphook.pas  cliphook.pl  cliphook.py  cliphook.ris  cliphook.rs  cliphook.sh  cliphook.ts  cliphook.zig  cn-thomas-decodedDekodiert-in-motives-purposesAbsichten.csv  code2img.cpp  (+225 more)
econs/: .gitignore  befehle.txt
econs/567/: CMakeLists.txt  CMakeLists.txt.old
econs/567/include/: econ.h  econ567.h  econ567emo2.h  notMain567a.h
econs/567/src/: econ567emo2.cpp  main.cpp  notMain567a.cpp
econs/678/de/: CMakeLists.txt  build.sh  econ678utf
econs/678/de/include/: notMainDe.h  rational.hpp  space.h  text.h
econs/678/de/src/: main.cpp  notMainDe.cpp  random.cpp  rational.cpp  space.cpp  text.cpp
econs/678/de2/: econ678utf.cpp
econs/678/en/: CMakeLists.txt  program
econs/678/en/include/: encoding_switch.h  encoding_utf8.h  notMainEn.h  rational.h  space.h
econs/678/en/src/: main.cpp  notMainEn.cpp  rational.cpp  space.cpp
econs/7/: CMakeLists.txt
econs/7/include/: from_rational.h  to_rational.h
econs/7/src/: from_rational.cpp  to_rational.cpp
econs/econ567/: CMakeLists.txt  CMakePresets.json  econ
econs/econ567/567old/: CMakeLists.txt
econs/econ567/567old/src/: main.cpp  math_utils.cpp
econs/econ567/include/: math_utils.h  notMain567b.h
econs/econ567/old/: econ.cpp  econ567b.cpp  main.cpp
econs/econ567/src/: econ567emo2.cpp  notMain567b.cpp
econs/menu/: CMakeLists.txt  build.sh
econs/menu/include/: bitmask.h  check.h  mode_ncurses.h  mode_text.h  mode_toggle.h  run_programs.h
econs/menu/src/: bitmask.cpp  check.cpp  main.cpp  mode_ncurses.cpp  mode_text.cpp  mode_toggle.cpp
econs/playground/: a.out  econ567emo2.h
econs/py/: econ.py  econ567.py  econ567emo2.py
econs/py/lib/: grad.py  grad2.py  gradtest.py
